--- a/intake.html
+++ b/intake.html
@@ -114,6 +114,7 @@
     <p class="form-intro">Please complete this form to begin the intake process. All information is confidential and will be used to ensure we provide the best possible support for our residents.</p>
     
     <form name="intake-form" method="POST" data-netlify="true" action="/thank-you.html">
+<input type="hidden" name="form-name" value="intake-form" />
       
       <!-- Caseworker -->
       <fieldset>
